Correct spacings on smaller screens
Corrects spacings on smaller screens

--- a/project-abundance-design-system/project-abundance-design-system-website/pages/design-system-style.css
+++ b/project-abundance-design-system/project-abundance-design-system-website/pages/design-system-style.css
@@ -151,7 +151,7 @@ nav {
 
 article {
     padding-right: 3.73%;
-    padding-right: 2%;
+    padding-left: 2%;
     width: 80%;
 }
 
@@ -185,7 +185,7 @@ main {
     background-color: var(--colorcards);
     outline: var(--outline);
     border-radius: 5px;
-    width: 100%;
+    min-width: 30%;
     padding: 2%;
     margin: 2%;
 }
@@ -448,10 +448,22 @@ nav.clean {
             }
 
             article {
+                padding-right: 2%;
+            }
+
+            .describing-item-card {
                 width: 100%;
             }
 
-            .describing-item-card{
+            .category-card {
+                width: 100%;
+            }
+
+            .describing-item-guidelines {
+                width: 100%;
+            }
+            
+            .demo-website {
                 width: 100%;
             }
 
